--- a/jenkinsfile/jenkinsfile
+++ b/jenkinsfile/jenkinsfile
@@ -47,6 +47,7 @@ node{
     }
     stage('docker image build')
     {
+    sh 'docker build -t spring-redis-image .'
     sh 'docker-compose up'
     }
 
