--- a/jenkinsfile/jenkinsfile
+++ b/jenkinsfile/jenkinsfile
@@ -48,7 +48,7 @@ node{
     stage('docker image build')
     {
  sh "docker build -t spring-redis-image ."
- sh "docker pull redis"
+ sh "docker run --name redis -d redis"
     echo "Image build complete"
   sh "docker run -p 8086:8086 --name spring-redis --link redis -d spring-redis-image"
    echo "container is up"
