--- a/jenkinsfile/jenkinsfile
+++ b/jenkinsfile/jenkinsfile
@@ -49,7 +49,7 @@ node{
     
     stage("Image Prune"){
         sh "docker image prune -f"
-        sh "docker stop spring-redis"
+        sh "docker stop spring-redis redis"
     }
     stage('docker image build')
     {
